# CameraSurveillance

./: LICENSE  readme.md
MotionDetection/: readme.md
MotionDetection/app/: build.gradle  proguard-rules.pro
MotionDetection/app/src/androidTest/java/com/example/jari/motiondetection/: ExampleInstrumentedTest.java
MotionDetection/app/src/main/: AndroidManifest.xml
MotionDetection/app/src/main/java/com/example/jari/motiondetection/: AlertReceiver.java  Connection.java  Constant.java  ImageActivity.java  ImageDataObject.java  ImageDownloader.java  ImageGalleryActivity.java  ImageGalleryAdapter.java  MainActivity.java  PollingService.java  PollingServiceRestarterReceiver.java  SingleImageAdapter.java  UnseenVideoListActivity.java  VideoActivity.java  VideoDataObject.java  VideoListAdapter.java
MotionDetection/app/src/main/res/layout/: activity_main.xml  gallery_activity.xml  image_activity.xml  video_activity.xml  video_list_activity.xml  video_list_item.xml
MotionDetection/app/src/main/res/menu/: video_player.xml
MotionDetection/app/src/main/res/values/: strings.xml
MotionDetection/app/src/test/java/com/example/jari/motiondetection/: ExampleUnitTest.java
MotionDetection/gradle/wrapper/: gradle-wrapper.properties
camServer/: .gitignore  app.js  dbController.js  imageGroup.js  imageHandler.js  main.js  package.json  readme.md  videoController.js
rpiCam/: .gitignore  app.js  package.json
rpiCam/camera/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  camera2.cpp  cmake_install.cmake  motion_detection  readme.md
